# sdk

./: .editorconfig  .flake8  .gitignore  .pylintrc  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linter.yml  publish.yml  pythonpackage.yml  test.yml
binaryai/: __init__.py  binaryai_cli.py  binaryai_file.py  cli.py  client.py  error.py  exceptions.py  function.py  ida.py  ida_binaryai.py  utils.py
binaryai/graphql/: function.py
binaryai/ida/: __init__.py  ida_feature.py  ida_plugin.py
docs/: Makefile  README.md  binaryai.rst  conf.py  index.md  index.rst  installation.md  introduction.md  quick_start.ipynb  registration.md  requirements.txt  usage.md
docs/locale/zh_CN/LC_MESSAGES/: CONTRIBUTING.po  index.po  quick_start.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/binaryai_file/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/client/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/component/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/compressed_file/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/cve/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/exceptions/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/function/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/license/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/upload/: index.po
docs/locale/zh_CN/LC_MESSAGES/autoapi/binaryai/utils/: index.po
examples/: binaryai_file.py  cve.py  decompile.py  decompress.py  ida_binaryai.py  info.py  license.py  md5_sha256.py  multithreads.py  sca.py  strings.py  upload_and_analysis.py  upload_binary.py
plugin/: ida_binaryai.py
src/binaryai/: __init__.py  binaryai_file.py  client.py  component.py  compressed_file.py  cve.py  exceptions.py  license.py  query.graphql  query.py  upload.py  utils.py
src/binaryai/client_stub/: __init__.py  a_s_c_i_i_string.py  ascii_string.py  base_client.py  base_model.py  c_v_e_name.py  check_or_upload.py  check_state.py  client.py  compressed_file.py  create_file.py  cve_name.py  download_link.py  enums.py  exceptions.py  file_k_hash.py  file_malware_probability.py  file_size.py  filename.py  function_info.py  function_list.py  function_match.py  functions_info.py  input_types.py  license.py  license_short_name.py  m_i_m_e_type.py  mime_type.py  overview.py  reanalyze.py  s_c_a.py  sca.py  sha256.py  sha_256.py
test/test_cli/: conftest.py  test_binaryai.py
test/test_function/: conftest.py  test_official_funset.py  test_upload_and_query.py
tests/: README.md  requirements.txt  test_utils.py
tests/test_cli/: conftest.py  test_binaryai.py  test_cli.py
tests/test_function/: conftest.py  test_create_funcset.py  test_official_funset.py  test_search_sim_func.py  test_upload_and_query.py
tests/test_others/: conftest.py  test_cli.py  test_others.py  test_token.py
tests/testdata/: test.pkl  test_official.pkl
tools/: verify_version.py
