[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "binaryai"
version = "0.8.2"
description = "BinaryAI-SDK is a library provides an abstracted client module to simplify the procedure of uploading file for analysis."
license = "GPLv3"
authors = ["binaryai <binaryai@tencent.com>"]
readme = "README.md"
homepage = "https://www.binaryai.cn/"
documentation = "https://www.binaryai.cn/doc/"
repository = "https://github.com/binaryai/sdk/"
exclude = ["examples"]

[tool.poetry.dependencies]
python = "^3.9"
deprecated = "^1.2.14"
httpx = "^0.25.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
black = "24.3.0"
isort = "5.10.1"
ariadne-codegen = "^0.13.0"
pytest = "^7.4.2"
scipy = "^1.13.0"

[tool.poetry.group.docs.dependencies]
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.3.7"
myst-parser = "^3.0.1"
sphinx-intl = "^2.2.0"
nbsphinx = "^0.9.3"
ipykernel = "^6.25.2"

[tool.ariadne-codegen]
remote_schema_url = "https://api.binaryai.cn/v1/endpoint"
queries_path = "./src/binaryai/query.graphql"
target_package_name = "client_stub"
target_package_path = "./src/binaryai"
async_client = false

[tool.black]
exclude = "src/binaryai/client_stub/*"

[tool.isort]
skip_glob = "src/binaryai/client_stub/*"
